--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freedom Knives</title>
     <link rel="stylesheet" href="styles.css">
+     <script src="https://kit.fontawesome.com/6c66317fd2.js"
+      crossorigin="anonymous"
+    ></script>
 </head>
 <body>
+    <nav>
+        <div class="fk__logo">
+            Freedom Knives
+        </div>
+        <ul class="nav__link--list">
+            <li class="nav__link">
+            <a href="#available" class="nav__link--anchor">Available Knives</a>
+        </li>
+        <li class="nav__link">
+            <a href="#events" class="nav__link--anchor">Events</a>
+        </li><li class="nav__link">
+            <a href="" class="nav__link--anchor nav__link--anchor-primary">Contact</a>
+        </li>
+        </ul>
+    </nav>
     
     <section id="header">
     <div class="header__row">
@@ -16,5 +34,63 @@
         <img src="./assets/Flag.jpg" class="header__img-flag">
     </figure>
 </section>
+<section id="available">
+<div class="flex flex-1">
+        <div class="available__info row">
+          <div class="available__info--container">
+            <h1 class="available__info--title">
+              Available Knives
+            </h1>
+            <p class="available__info--para">
+              Available knives will soon be shown here.
+          </div>
+        </div>
+      </div>
+    </section>
+
+<section id="events">
+<div class="flex flex-1">
+        <div class="events__info row">
+          <div class="events__info--container">
+            <h1 class="events__info--title">
+              Events
+            </h1>
+            <p class="events__info--para">
+              A list of events will is coming soon. 
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+<footer>
+    <div class="row footer__row">
+        <a href="#" class="footer__anchor">
+            <figure class="footer__logo">
+                <img src="./assets/FreedomKnivesLogo.png" class="footer__logo--img">
+            </figure>
+            <span class="footer__logo--popper">Top
+                <i class="fa-solid fa-arrow-up"></i>
+            </span>
+        </a>
+        <div class="footer__social--list">
+          <a href="http://www.google.com" target="_blank" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--white"> Email
+                </a> 
+                  <a href="tel:4052558919" target="_blank" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--white"> (405)255-8919
+                </a>  <a href="http://www.google.com" target="_blank" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--white"> Facebook
+                </a>
+        </div>
+        <div class="footer__copyright">Copyright © 2025 Steve McMullin</div>
+    </div>
+</footer>
 </body>
 </html>
