--- a/index.html
+++ b/index.html
@@ -1,96 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Freedom Knives</title>
-    <link rel="stylesheet" href="styles.css">
-     <script src="https://kit.fontawesome.com/6c66317fd2.js"
+    <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/6c66317fd2.js"
       crossorigin="anonymous"
     ></script>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <div class="fk__logo">
-            Freedom Knives
-        </div>
-        <ul class="nav__link--list">
-            <li class="nav__link">
-            <a href="#available" class="nav__link--anchor">Available Knives</a>
+      <div class="fk__logo">Freedom Knives</div>
+      <ul class="nav__link--list">
+        <li class="nav__link">
+          <a href="#available" class="nav__link--anchor">Available Knives</a>
         </li>
         <li class="nav__link">
-            <a href="#events" class="nav__link--anchor">Events</a>
-        </li><li class="nav__link">
-            <a href="" class="nav__link--anchor nav__link--anchor-primary">Contact</a>
+          <a href="#events" class="nav__link--anchor">Events</a>
         </li>
-        </ul>
+        <li class="nav__link">
+          <a href="" class="nav__link--anchor nav__link--anchor-primary"
+            >Contact</a
+          >
+        </li>
+      </ul>
     </nav>
-    
+
     <section id="header">
-    <div class="header__row">
-    <h1>Freedom Knives - Coming Soon!</h1>
-    </div>
-    <figure class="header__img">
-        <img src="./assets/Flag.jpg" class="header__img-flag">
-    </figure>
-</section>
-<section id="available">
-<div class="flex flex-1">
-        <div class="available__info row">
-          <div class="available__info--container">
-            <h1 class="available__info--title">
-              Available Knives
-            </h1>
-            <p class="available__info--para">
-              Available knives will soon be shown here.
-          </div>
+      <div class="header__row">
+        <h1>Freedom Knives</h1>
+      </div>
+      <figure class="header__img">
+        <img src="./assets/Flag.jpg" class="header__img-flag" />
+      </figure>
+    </section>
+    <section id="available">
+      <div class="container">
+        <div class="row">
+      <h1 class="available__info--title">Available Knives</h1>
+      <div class="available__img--list">
+        <figure class="available__img--wrapper">
+          <img src="./assets/image0.jpeg" class="available__img">
+        </figure>
+        <figure class="available__img--wrapper">
+          <img src="./assets/image1.jpeg" class="available__img" alt="">
+        </figure>
+        <figure class="available__img--wrapper">
+         <img src="./assets/image2.jpeg" class="available__img">
+        </figure>
         </div>
+       </div>
       </div>
     </section>
 
-<section id="events">
-<div class="flex flex-1">
+    <section id="events">
+      <div class="flex flex-1">
         <div class="events__info row">
           <div class="events__info--container">
-            <h1 class="events__info--title">
-              Events
-            </h1>
-            <p class="events__info--para">
-              A list of events will is coming soon. 
+            <h1 class="events__info--title">Events</h1>
+            <h2>
+              Check out the upcoming events listed below:
+            </h2>
+            <div class="event__list">
+              <p class="events__info--para">Guthrie Flea Market - August 2nd </p>
+              <p class="events__info--para">
+              Clyde Hall's Oklahoma City Gun Show - Aug. 9th and 10th 
+            </p>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-
-<footer>
-    <div class="row footer__row">
+    <footer>
+      <div class="row footer__row">
         <a href="#" class="footer__anchor">
-            <figure class="footer__logo">
-                <img src="./assets/FreedomKnivesLogo.png" class="footer__logo--img">
-            </figure>
-            <span class="footer__logo--popper">Top
-                <i class="fa-solid fa-arrow-up"></i>
-            </span>
+          <figure class="footer__logo">
+            <img
+              src="./assets/FreedomKnivesLogo.png"
+              class="footer__logo--img"
+            />
+          </figure>
+          <span class="footer__logo--popper"
+            >Top
+            <i class="fa-solid fa-arrow-up"></i>
+          </span>
         </a>
         <div class="footer__social--list">
-          <a href="http://www.google.com" target="_blank" class="
-                    footer__social--link
-                    link__hover-effect
-                    link__hover-effect--white"> Email
-                </a> 
-                  <a href="tel:4052558919" target="_blank" class="
-                    footer__social--link
-                    link__hover-effect
-                    link__hover-effect--white"> (405)255-8919
-                </a>  <a href="http://www.google.com" target="_blank" class="
-                    footer__social--link
-                    link__hover-effect
-                    link__hover-effect--white"> Facebook
-                </a>
+          <a
+            href="http://www.google.com"
+            target="_blank"
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+          >
+            Email
+          </a>
+          <a
+            href="tel:4052558919"
+            target="_blank"
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+          >
+            (405)255-8919
+          </a>
+          <a
+            href="https://www.facebook.com/steve.mcmullin.92"
+            target="_blank"
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+          >
+            Facebook
+          </a>
         </div>
         <div class="footer__copyright">Copyright © 2025 Steve McMullin</div>
-    </div>
-</footer>
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
