--- a/index.html
+++ b/index.html
@@ -41,15 +41,21 @@
         <div class="row">
       <h1 class="available__info--title">Available Knives</h1>
       <div class="available__img--list">
+        <button class="img__link">
         <figure class="available__img--wrapper">
           <img src="./assets/image0.jpeg" class="available__img">
+        </button>
         </figure>
+        <button class="img__link">
         <figure class="available__img--wrapper">
           <img src="./assets/image1.jpeg" class="available__img" alt="">
         </figure>
+      </button>
+        <button class="img__link">
         <figure class="available__img--wrapper">
          <img src="./assets/image2.jpeg" class="available__img">
         </figure>
+      </button>
         </div>
        </div>
       </div>
