small phones img

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
     <section id="available">
       <div class="container">
         <div class="row">
-      <h1 class="available__info--title">Available Knives</h1>
-      <div class="available__img--list">
-        <figure class="available__img--wrapper">
-          <img src="./assets/image0.jpeg" class="available__img">
-        </figure>
-        <figure class="available__img--wrapper">
-          <img src="./assets/image1.jpeg" class="available__img" alt="">
-        </figure>
-        <figure class="available__img--wrapper">
-         <img src="./assets/image2.jpeg" class="available__img">
-        </figure>
+          <h2 class="available__info--title">Available Knives</h1>
+          <div class="available__img--list">
+            <figure class="available__img--wrapper">
+              <img src="./assets/image0.jpeg" class="available__img" />
+            </figure>
+            <figure class="available__img--wrapper">
+              <img src="./assets/image1.jpeg" class="available__img" alt="" />
+            </figure>
+            <figure class="available__img--wrapper">
+              <img src="./assets/image2.jpeg" class="available__img" />
+            </figure>
+          </div>
         </div>
-       </div>
       </div>
     </section>
 
@@ -59,15 +59,13 @@
       <div class="flex flex-1">
         <div class="events__info row">
           <div class="events__info--container">
-            <h1 class="events__info--title">Events</h1>
-            <h2>
-              Check out the upcoming events listed below:
-            </h2>
+            <h2 class="events__info--title">Events</h1>
+            <h3>Check out the upcoming events listed below:</h2>
             <div class="event__list">
-              <p class="events__info--para">Guthrie Flea Market - August 2nd </p>
+              <p class="events__info--para">Guthrie Flea Market - August 2nd</p>
               <p class="events__info--para">
-              Clyde Hall's Oklahoma City Gun Show - Aug. 9th and 10th 
-            </p>
+                Clyde Hall's Oklahoma City Gun Show - Aug. 9th and 10th
+              </p>
             </div>
           </div>
         </div>
