--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="#events" class="nav__link--anchor">Events</a>
         </li>
         <li class="nav__link">
-          <a href="" class="nav__link--anchor nav__link--anchor-primary"
+          <a href="mailto:freedom.omega52@gmail.com" target="_blank" class="nav__link--anchor nav__link--anchor-primary"
             >Contact</a
           >
         </li>
@@ -88,7 +88,7 @@
         </a>
         <div class="footer__social--list">
           <a
-            href="http://www.google.com"
+            href="mailto:freedom.omega52@gmail.com"
             target="_blank"
             class="footer__social--link link__hover-effect link__hover-effect--white"
           >
