nav change for small phones

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <nav>
       <div class="fk__logo">Freedom Knives</div>
       <ul class="nav__link--list">
-        <li class="nav__link">
+        <li class="nav__link no_small">
           <a href="#available" class="nav__link--anchor">Available Knives</a>
         </li>
-        <li class="nav__link">
+        <li class="nav__link no_small">
           <a href="#events" class="nav__link--anchor">Events</a>
         </li>
         <li class="nav__link">
