--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   </head>
   <body>
     <nav>
-      <div class="fk__logo">Freedom Knives</div>
+      <div class="fk__logo no_small">Freedom Knives</div>
       <ul class="nav__link--list">
-        <li class="nav__link no_small">
+        <li class="nav__link">
           <a href="#available" class="nav__link--anchor">Available Knives</a>
         </li>
-        <li class="nav__link no_small">
+        <li class="nav__link">
           <a href="#events" class="nav__link--anchor">Events</a>
         </li>
         <li class="nav__link">
