coming soon events

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h3>Check out the upcoming events listed below:</h2>
             <div class="event__list">
               <p class="events__info--para">
-                Clyde Hall's Oklahoma City Gun Show - Aug. 9th and 10th
+                Coming soon!
               </p>
             </div>
           </div>
